Fix text visibility in cart for small screens; fix menu opening error

--- a/src/stylesheets/components/Atoms/_itemModal.scss
+++ b/src/stylesheets/components/Atoms/_itemModal.scss
@@ -5,17 +5,19 @@
   justify-content: space-between;
   align-items: center;
   max-height: rem(64);
-  gap: 1rem;
+  gap: 0.5rem;
 
   &__image-container {
     height: rem(64);
     width: rem(64);
+    margin-right: 0.5rem;
   }
 
   &__img {
     object-fit: contain;
     border-radius: 8px;
     overflow: hidden;
+    min-width: 64px;
   }
 
   &__text {
@@ -23,5 +25,6 @@
     flex-direction: column;
     align-items: flex-start;
     flex-grow: 1;
+    white-space: nowrap;
   }
 }
